--- a/index.html
+++ b/index.html
@@ -1,12 +1,17 @@
-<title>ᛗ Merlin</title>
+<!DOCTYPE HTML>
 
+<html lang="en">
+<head>
+	<title>ᛗ Merlin</title>
+	<link rel='stylesheet' type='text/css' href='style.css'>
+</head>
+<body>
 <pre>
-<b>ᛗ ᛘ
-ᛘ ᛗ</b>
-
-The Merlin Text editor
-<hr>
-- Esoteric
-- Simple
-- Extensible
+<b>ᛗ ᛫
+᛫ ᛗ</b>
 </pre>
+	
+	The Merlin Text editor
+	<hr>
+</body>
+</html>
