--- a/index.html
+++ b/index.html
@@ -13,5 +13,7 @@
 	
 	The Merlin Text editor
 	<hr>
+<br>
+	Merlin is an esoteric text editor based on a stack and buffer model. It aims to be simple, extensible, and, above all, weird.
 </body>
 </html>
