--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <html lang="en">
 <head>
-	<title>ᛗ Merlin</title>
+	<title>ᛗ - Home</title>
 	<link rel='stylesheet' type='text/css' href='style.css'>
 </head>
 <body>
@@ -13,6 +13,9 @@
 	
 	The Merlin Text editor
 	<hr>
-	<br>
+
+	<p class="tab">
+	- <a href="https://github.com/merlinfo/merlin">GitHub</a>
+	</p>
 </body>
 </html>
