--- a/index.html
+++ b/index.html
@@ -2,19 +2,22 @@
 
 <html lang="en">
 <head>
-	<title>ᛗ - Home</title>
+	<title>Home</title>
 	<link rel='stylesheet' type='text/css' href='style.css'>
 </head>
 <body>
-<pre>
-<b>ᛗ ᛫
-᛫ ᛗ</b>
-</pre>
+<b style="color: darkred">ᛗ</b>
+<br>
+<br>
 	
-	The Merlin Text Editor
+	<u>The Merlin Text Editor</u>
 	<hr>
 
 	<p class="tab">
+	- <a href="tutorial.html">Tutorial</a>
+	<br>
+	- <a href="philosophy.html">Philosophy</a>
+	<br>
 	- <a href="https://github.com/merlinfo/merlin">GitHub</a>
 	</p>
 </body>
