--- a/index.html
+++ b/index.html
@@ -6,12 +6,20 @@
 	<link rel='stylesheet' type='text/css' href='style.css'>
 </head>
 <body>
-<b style="color: darkred">ᛗ</b>
-<br>
-<br>
-	
+	<b style="color: darkred">ᛗ</b>
+	<br>
+
+<pre>
+ (\.   \      ,/)
+  \(   |\     )/
+  //\  | \   /\\
+ (/ /\_#oo#_/\ \)
+  \/\  ####  /\/
+       `##'
+</pre>
 	<u>The Merlin Text Editor</u>
 	<hr>
+
 
 	<p class="tab">
 	- <a href="tutorial.html">Tutorial</a>
