--- a/index.html
+++ b/index.html
@@ -6,9 +6,7 @@
 	<link rel='stylesheet' type='text/css' href='style.css'>
 </head>
 <body>
-	<b style="color: darkred">ᛗ</b>
-	<br>
-
+	<span class="dr">ᛗ</span>
 <pre>
  (\.   \      ,/)
   \(   |\     )/
@@ -17,16 +15,13 @@
   \/\  ####  /\/
        `##'
 </pre>
-	<u>The Merlin Text Editor</u>
+	<span style="font-weight:">The Merlin Text Editor</span>
 	<hr>
 
-
-	<p class="tab">
-	- <a href="tutorial.html">Tutorial</a>
-	<br>
-	- <a href="philosophy.html">Philosophy</a>
-	<br>
-	- <a href="https://github.com/merlinfo/merlin">GitHub</a>
-	</p>
+	<ul class="tab">
+	<li><a href="tutorial.html">Tutorial</a></li>
+	<li><a href="philosophy.html">Philosophy</a></li>
+	<li><a href="https://github.com/merlinfo/merlin">GitHub</a></li>
+	</ul>
 </body>
 </html>
