--- a/philosophy.html
+++ b/philosophy.html
@@ -6,17 +6,16 @@
 	<link rel='stylesheet' type='text/css' href='style.css'>
 </head>
 <body>
-<b style="color: darkred">ᛗ</b>
-<br>
+<div class="dr">ᛗ</div>
 <br>
 	
-	<u>Philosophy</u>
+	Philosophy
 	<hr>
 
-	<p class="tab">
-	Merlin is cheifly inspired by the likes of Ken Thompson's <code>ed</code> and Rob Pike's <code>sam</code>. It uses a command line powered by a stack-based, forth-esque shell langauge called <i>Merlin Notation</i>. Although Merlin notation only allows for elementary editing and managment of mutiple buffers, it is able to elegantly handle the transfer of textual data from Merlin to the greater operating system, and back again. Merlin has no built-in screen editor, although an external one, <i>Arthur</i>, is currently in the works. Merlin is purposely designed to do almost nothing out of the box, but gives the user the tools to interface with their greater operating system and combine provided commands to implement useful and elegant solutions to common editing problems. In short, Merlin is designed to fit neatly within the realm of the user's operating system and allow them to use their existing tools to build a configuration of Merlin that work's perfectly for them.
-	<br><br>
-	Keep in mind that Merlin is quite experimental and won't offer the luxuries of modern text editors and IDEs. However, it does offer a unique approach to text editing and at least serves as a curiosity.
-	</p>
+	<div class="tab">
+	<p>Merlin is cheifly inspired by the likes of Ken Thompson's <code>ed</code> and Rob Pike's <code>sam</code>. It uses a command line powered by a stack-based, forth-esque shell langauge called <i>Merlin Notation</i>. Although Merlin notation only allows for elementary editing and managment of mutiple buffers, it is able to elegantly handle the transfer of textual data from Merlin to the greater operating system, and back again. Merlin has no built-in screen editor, although an external one, <i>Arthur</i>, is currently in the works. Merlin is purposely designed to do almost nothing out of the box, but gives the user the tools to interface with their greater operating system and combine provided commands to implement useful and elegant solutions to common editing problems. In short, Merlin is designed to fit neatly within the realm of the user's operating system and allow them to use their existing tools to build a configuration of Merlin that work's perfectly for them.</p>
+
+	<p>Keep in mind that Merlin is quite experimental and won't offer the luxuries of modern text editors and IDEs. However, it does offer a unique approach to text editing and at least serves as a curiosity.</p>
+	</div>
 </body>
 </html>
