--- a/tutorial.html
+++ b/tutorial.html
@@ -6,174 +6,108 @@
 	<link rel='stylesheet' type='text/css' href='style.css'>
 </head>
 <body>
-<b style="color: darkred">ᛗ</b>
+<div class="dr">ᛗ</div>
 <br>
-<br>
-	
-	<u>Tutorial (Incomplete)</u>
-	<hr>
 
-	<p class="tab">
-	Once installed, Merlin can be invoked in your shell of choice by simply typing <code>merlin</code> and hitting return.
-	<br>
-	
-	You should then be greeted by a comma and blinking cursor. Something like:
-	
-	<br><br>
+Tutorial (Incomplete)
+<hr>
 
-	<code>
+	<div class="tab">
+	<p>Once installed, Merlin can be invoked in your shell of choice by simply typing <code>merlin</code> and hitting return.</p>
+	
+	<p>You should then be greeted by a comma and blinking cursor. Something like:</p>
+	
+	<pre><code>
 	$ merlin
-	<br>
 	, |
-	</code>
+	</pre></code>
 
-	<br><br>
+	<p>First, we can start out by typing some text and hitting enter.</p>
 
-	First, we can start out by typing some text and hitting enter.
-
-	<br><br>
-
-	<code>
+	<pre><code>
 	, hello, merlin!
-	<br>
 	, |
-	</code>
+	</pre></code>
 
-	<br><br>
+	<p>Now, what exactly did this do? Well, Merlin will automatically start in its <code>atom</code> mode, so in this case typing <code>hello, merlin!</code> will first add <code>hello,</code> and then <code>merlin!</code> to the <i>stack</i>. The <i>stack</i>, in Merlin, is a global list of data, or pieces of text, called <i>atoms</i>. To view the stack, we can use the <code>molecule</code> command like so:</p>
 
-	Now, what exactly did this do? Well, Merlin will automatically start in its <code>atom</code> mode, so in this case typing <code>hello, merlin!</code> will first add <code>hello,</code> and then <code>merlin!</code> to the <i>stack</i>. The <i>stack</i>, in Merlin, is a global list of data, or pieces of text, called <i>atoms</i>. To view the stack, we can use the <code>molecule</code> command like so:
-
-	<br><br>
-
-	<code>
+	<pre><code>
 	, ;molecule
-	<br>
 	hello, merlin!
-	<br>
 	, |
-	</code>
+	</pre></code>
 
-	<br><br>
-
-	Take note that commands in Merlin are prefixed with a semicolon, to distinguish them from atoms. If you would like to add an atom beginning with a semicolon to the stack, you can prefix it with a backslash (\).
+	<p>Take note that commands in Merlin are prefixed with a semicolon, to distinguish them from atoms. If you would like to add an atom beginning with a semicolon to the stack, you can prefix it with a backslash (\).</p>
 	
-	<br><br>
+	<p>Now, what if we would like to switch the order of these two atoms? We can use the <code>orbit</code> command.</p>
 
-	Now, what if we would like to switch the order of these two atoms? We can use the <code>orbit</code> command.
-
-	<br><br>
-
-	<code>
+	<pre><code>
 	, ;orbit ;molecule
-	<br>
 	merlin! hello,
-	<br>
 	, |
-	</code>
+	</pre></code>
 
-	<br><br>
+	<p>There we go! Now the order of the two atoms have been reversed. Again, take note that just like you can add two atoms to the stack on the same line, you can also run two commands.</p>
 
-	There we go! Now the order of the two atoms have been reversed. Again, take note that just like you can add two atoms to the stack on the same line, you can also run two commands.
+	<p>Of course if you can add atoms, you must also be able to remove them. You can do so with the <code>decay</code> command.</p>
 
-	<br><br>
-
-	Of course if you can add atoms, you must also be able to remove them. You can do so with the <code>decay</code> command.
-
-	<br><br>
-
-	<code>
+	<pre><code>
 	, ;decay ;molecule
-	<br>
 	merlin!
-	<br>
 	, |
-	</code>
+	</pre></code>
 
-	<br><br>
+	<p>You can also clear the entire stack using <code>destroy</code>:</p>
 
-	You can also clear the entire stack using <code>destroy</code>:
-
-	<br><br>
-
-	<code>
+	<pre><code>
 	, ;destroy ;molecule
-	<br>
 	, |
-	</code>
+	</pre></code>
 
-	<br><br>
+	<p>Often you will need to view the last atom on the stack, that can be done with <code>pen</code>.</p>
 
-	Often you will need to view the last atom on the stack, that can be done with <code>pen</code>.
-
-	<br><br>
-
-	<code>
+	<pre><code>
 	, hello world
-	<br>
 	, ;pen
 	world, |
-	<br>
-	</code>
+	</pre></code>
 
-	<br><br>
+	<p>Well would you look at that, <code>pen</code> doesn't append a newline! If you would like to use a newline anywhere in Merlin, you can use <code>new</code>. Although it is formatted like a command, all it really does is add a newline to the stack. Think of it being like <code>\n</code> in C derived programming languages.</p>
 
-	Well would you look at that, <code>pen</code> doesn't append a newline! If you would like to use a newline anywhere in Merlin, you can use <code>new</code>. Although it is formatted like a command, all it really does is add a newline to the stack. Think of it being like <code>\n</code> in C derived programming languages.
+	<p>So, if we wanted to print the last atom on the stack, followed by a newline we could do something like:</p>
 
-	<br><br>
-
-	So, if we wanted to print the last atom on the stack, followed by a newline we could do something like:
-
-	<br><br>
-
-	<code>
+	<pre><code>
 	, ;pen ;new ;pen ;decay
-	<br>
 	world
-	<br>
 	, |
-	</code>
+	</pre></code>
 
-	<br><br>
+	<p>The <code>decay</code> is necessary for removing the newline we added to the stack.</p>
 
-	The <code>decay</code> is nessicary for removing the newline we added to the stack.
+	<p>Another action that you will find is very commonly needed in Merlin is joining and splitting atoms on the stack. You can use the <code>tether</code> command to join all of the atoms by another atom.</p>
 
-	<br><br>
-
-	Another action that you will find is very commonly needed in Merlin is joining and splitting atoms on the stack. You can use the <code>tether</code> command to join all of the atoms by another atom.
-
-	<br><br>
-
-	<code>
+	<pre><code>
 	, ;new ;tether
-	<br>
 	, ;pen ;new ;pen ;decay
-	<br>
 	hello
-	<br>
 	world
-	<br>
 	, |
-	</code>
+	</pre></code>
 
-	<br><br>
+	<p>Essentially, <code>tether</code> will take the last atom, intersplicing it between all of the previous atoms, creating a <i>new</i> atom.</p>
 
-	Essentially, <code>tether</code> will take the last atom, intersplicing it between all of the previous atoms, creating a <i>new</i> atom.
-
-	<br><br>
-
-	<code>fray</code> works in a similar way. It takes the second to last atom and splits it into different atoms, using the last atom as the delimiter.
+	<p><code>fray</code> works in a similar way. It takes the second to last atom and splits it into different atoms, using the last atom as the delimiter.</p>
 	
-	<br><br>
-
-	<code>
+	<pre><code>
 	, ;new ;fray
-	<br>
 	, ;molecule
-	<br>
 	hello world
-	<br>
 	, |
-	</code>
-	</p>
+	</pre></code>
+
+	<p>Now you have learned all of the ways you can manipulate the stack in Merlin! But still, many of these actions can be clunky to type out each time, that's where the <code>nomen</code> command comes in.</p>
+	
+	<p>The <code>nomen</code> command captures all of the atoms in the stack, creating a new command, named by whatever the last atom of the stack was.</p>
+	</div>
 </body>
 </html>
