--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 	<hr>
 
 	<ul class="tab">
-		<li><a href="tutorial.html">Tutorial</a></li>
-		<li><a href="philosophy.html">Philosophy</a></li>
+		<li><a href="tutorial">Tutorial</a></li>
+		<li><a href="philosophy">Philosophy</a></li>
 		<li><a href="https://github.com/merlinfo/merlin">GitHub</a></li>
 	</ul>
 </body>
