--- a/tutorial.html
+++ b/tutorial.html
@@ -21,7 +21,7 @@ Tutorial (Incomplete)
 	</ol>
 
 
-	<h3 id="starting">Starting Merlin</h3>
+	<h3 id="starting_merlin">Starting Merlin</h3>
 
 	<p>Once installed, Merlin can be invoked in your shell of choice by simply typing <code>merlin</code> and hitting return.</p>
 	
