added the nomenomicon

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 	<hr>
 
 	<ul class="tab">
+		<li><a href="nomenomicon">Nomenomicon</a></li>
 		<li><a href="tutorial">Tutorial</a></li>
 		<li><a href="philosophy">Philosophy</a></li>
 		<li><a href="https://github.com/merlinfo/merlin">GitHub</a></li>
