--- a/nomenomicon.html
+++ b/nomenomicon.html
@@ -12,6 +12,8 @@
 	<p>This is the <i>Nomenomicon</i>, it contains all of the built-in Merlin commands and nomens, with usage notes.</p>
 
 	<div class="tab">
+		<p class="bold">Normal Commands:</p>
+		
 		<dl>
 			<dt>[s] ;genesis</dt>
 			<dt>[i] ;spine [s]</dt>
@@ -32,7 +34,7 @@
 			<dt>[n] ;shift</dt>
 			<dt>[i] ;appear</dt>
 			<dt>[i] ;infix</dt>
-			<dt>[i] [i] ;peer</dt>
+			<dt>[i] [i] ;peer [s]</dt>
 			<dt>[s] ;inscribe</dt>
 			<dt>[s] ;trample</dt>
 			<dt>;burn</dt>
@@ -56,6 +58,17 @@
 			<dt>[f] ;dub</dt>
 			<dt>;carve</dt>
 			<dt>[f] ;spellbook</dt>
+
+			<p class="bold">Predefined Nomens:</p>
+
+			<dt>;space [s]</dt>
+			<dt>;tab [s]</dt>
+			<dt>;new [s]</dt>
+			<dt>;blank [s]</dt>
+			<dt>;scribe-nomen</dt>
+			<dt>;atom-nomen</dt>
+			<dt>;scribe-pompt</dt>
+			<dt>;atom-prompt</dt>
 		</dl>
 	</div>
 </body>
