--- a/nomenomicon.html
+++ b/nomenomicon.html
@@ -51,6 +51,7 @@
 			<dt>;scribe</dt>
 			<dt>;adieu</dt>
 			<dt>...[a] [;] ;nomen</dt>
+			<dt>[a] [;] ;bottle</dt>
 			<dt>[;] ;disenchant</dt>
 			<dt>[;] ;smash</dt>
 			<dt>[s] ;merlin</dt>
