--- a/nomenomicon.html
+++ b/nomenomicon.html
@@ -115,7 +115,7 @@
 			<dt>;blank [s]</dt>
 				<dd>Returns an empty atom</dd>
 			<dt>;scribe-nomen</dt>
-				<dd>Runs after each line is parsed in scribe mode, by default is does nothing</dd>
+				<dd>Runs after each line is parsed in scribe mode, by default it does nothing</dd>
 			<dt>;atom-nomen</dt>
 				<dd>Exactly the same as scribe-nomen, but for atom mode</dd>
 			<dt>;scribe-pompt</dt>
