--- a/nomenomicon.html
+++ b/nomenomicon.html
@@ -114,6 +114,8 @@
 				<dd>Returns a newline character (\n)</dd>
 			<dt>;blank [s]</dt>
 				<dd>Returns an empty atom</dd>
+			<dt>;escape [s]</dt>
+				<dd>Returns an escape character (ASCII 27)</dd>
 			<dt>;scribe-nomen</dt>
 				<dd>Runs after each line is parsed in scribe mode, by default it does nothing</dd>
 			<dt>;atom-nomen</dt>
