--- a/tutorial.html
+++ b/tutorial.html
@@ -147,7 +147,7 @@
 	Hello! ;pen ;decay ;new ;pen ;decay
 	</code></pre>
 
-	<p>Not only can you create nomens, but also delete and "clear" them. The <code>disenchant</code> command will take the name of a nomen and set it to do nothing. The nomen must be already be in memory. The <code>smash</code> will completely delete the nomen.</p>
+	<p>Not only can you create nomens, but also delete and "clear" them. The <code>disenchant</code> command will take the name of a nomen and set it to do nothing. The nomen must be already be in memory. The <code>smash</code> command will completely delete the nomen.</p>
 
 	<p>The difference between the two commands is illustrated below:</p>
 
