--- a/nomenomicon.html
+++ b/nomenomicon.html
@@ -77,6 +77,8 @@
 				<dd>Clear the stack</dd>
 			<dt>...[a] [s] ;tether</dt>
 				<dd>Join atoms together by [s], consumes entire stack</dd>
+			<dt>[s] [s] [s] ;stitch</dt>
+				<dd>Like tether, but it only operates on two atoms</dd>
 			<dt>[s] [s] ;fray</dt>
 				<dd>Split [s] by [s]</dd>
 			<dt>;atom</dt>
