--- a/nomenomicon.html
+++ b/nomenomicon.html
@@ -11,6 +11,8 @@
 	
 	<p>This is the <i>Nomenomicon</i>, it contains all of the built-in Merlin commands and nomens, with usage notes.</p>
 
+	<p>Note: This page will be updated based on the development branch of Merlin, not stable releases</p>
+
 	<div class="tab">
 		<p class="bold">Normal Commands:</p>
 		
@@ -95,6 +97,8 @@
 				<dd>"Clear" a nomen, the nomen will still remain in memory but will do nothing</dd>
 			<dt>[;] ;smash</dt>
 				<dd>Completely remove a nomen from memory</dd>
+			<dt>[;] ;rune</dt>
+				<dd>Return the definition of a nomen</dd>
 			<dt>[s] ;merlin</dt>
 				<dd>Execute an atom as inline Merlin Notation</dd>
 			<dt>[f] ;summon</dt>
