--- a/nomenomicon.html
+++ b/nomenomicon.html
@@ -11,7 +11,7 @@
 	
 	<p>This is the <i>Nomenomicon</i>, it contains all of the built-in Merlin commands and nomens, with usage notes.</p>
 
-	<p>Note: This page will be updated based on the development branch of Merlin, not stable releases</p>
+	<p>Note: This page will be updated based upon the development branch of Merlin, <em>not</em> stable releases.</p>
 
 	<div class="tab">
 		<p class="bold">Normal Commands:</p>
