add documentation for the pervert command

--- a/nomenomicon.html
+++ b/nomenomicon.html
@@ -73,6 +73,8 @@
 				<dd>Print the last atom on the stack (This does not consume the atom)</dd>
 			<dt>;orbit</dt>
 				<dd>Perform a swap with the last two atoms</dd>
+			<dt>;pervert</dt>
+				<dd>Reverse the stack</dd>
 			<dt>[a] ;decay</dt>
 				<dd>Pop off the bottom atom</dd>
 			<dt>...[a] ;destroy</dt>
