--- a/nomenomicon.html
+++ b/nomenomicon.html
@@ -111,6 +111,8 @@
 				<dd>Write a volume to a file</dd>
 			<dt>[f] ;spellbook</dt>
 				<dd>Open and parse [f] as Merlin Notation</dd>
+			<dt>;protean</dt>
+				<dd>Return a list containing the name of each defined nomen currently in memory</dd>
 
 			<p class="bold">Predefined Nomens:</p>
 
